# Gobang-Game

./: .gitignore  AI_function.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  SECURITY.md  ai.c  ai.h  compile.bat  compile_gui.bat  config.c  config.h  game_mode.c  game_mode.h  globals.c  globals.h  gobang.c  gobang.h  gobang_config.ini  gui.c  gui.h  index.html  init_board.c  init_board.h  installer.nsi  main.c  network.c  network.h  package-lock.json  package.json  record.c  record.h  tsconfig.app.json  type.h  ui.c  (+3 more)
.cargo/: config.toml
MD/: AI_Enhancement_Guide.md  AI_function.md  Architecture_Refactoring_Guide.md  BUILD.md  ICON_GUIDE.md  NETWORK_README.md  README.md  README_GUI.md
TXT/: 代码统计报告.txt  简介.txt  项目要求.txt
core/: Cargo.toml
core/src/: board.rs  lib.rs  llm.rs  network.rs  record.rs  rules.rs  types.rs
core/src/ai/: evaluate.rs  killer.rs  mod.rs  opening.rs  search.rs  trans_table.rs  vcf.rs
docs/superpowers/plans/: 2026-05-30-gobang-v2-implementation.md  2026-05-31-gobang-ai-upgrade-plan.md  2026-05-31-gobang-network-implementation.md  2026-05-31-gobang-v2-review-fixes.md
docs/superpowers/specs/: 2026-05-30-gobang-v2-design.md  2026-05-31-gobang-ai-upgrade-design.md  2026-05-31-gobang-network-design.md
gui/: Cargo.toml  tauri.conf.json
gui/icons/: icon.icns
gui/src/: commands.rs  lib.rs  main.rs
include/: ai.h  config.h  game_mode.h  globals.h  gobang.h  gui.h  gui_internal.h  gui_menu.h  llm_ai.h  network.h  record.h  type.h
installer/: installer.iss  installer.nsi  setup.iss
records/: 20250709_223043.csv  20250709_224350.csv  20250709_225006.csv  20250710_093715.csv  20250710_094743.csv  20250710_095852.csv  20250710_173236.csv  20250710_175331.csv  20250710_180736.csv  20250720_230546.csv  20250720_231306.csv
src/: App.css  App.tsx  ai.c  config.c  game_mode.c  globals.c  gobang.c  gui.c  gui_core.c  gui_game.c  gui_menu.c  gui_replay.c  main.c  network.c  record.c  ui.c
src/components/board/: BoardCanvas.tsx  board-renderer.ts
src/components/board/__tests__/: board-renderer.test.ts
src/components/common/: ErrorBoundary.tsx
src/components/game/: GameControls.tsx  GameInfo.tsx  GameView.tsx  TimerDisplay.tsx
src/components/menu/: AiGameSetup.tsx  LoadReplay.tsx  LocalGameSetup.tsx  MainMenu.tsx  OnlineSetup.tsx
src/components/replay/: ReplayControls.tsx  ReplayView.tsx  StepSlider.tsx
src/core/: ai.c  config.c  constants.ts  globals.c  gobang.c  main.c  types.ts
src/core/__tests__/: types.test.ts
src/gui/: gui_core.c  gui_draw.c  gui_game.c  gui_menu.c  gui_replay.c
src/hooks/: useGame.ts  useTimer.ts
src/i18n/: en.json  index.ts  zh-CN.json
src/llm/: llm_ai.c
src/network/: network.c
src/record/: record.c
src/store/: gameStore.ts
