[package]
name = "gobang-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
renet = "2"
reqwest = { version = "0.12", features = ["json", "blocking"] }
rand = "0.8"
